--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello, everyone. I'm an ESL teacher having worked in Phnom Penh, Cambodia for the last eight years as a first grade teacher in an international school. Since moving back to the states, I'm looking to change from the educational field to a career in web development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I’m an American citizen born and raised in the greater Seattle area.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Well, I’ve always been interested in languages; I have a B.A. in Linguistics from the University of Washington. And while for most of my life that interest in languages has been specifically to human language, I’m also becoming more and more attracted to the directness and efficiency of computer languages as well. I also like to take advantage of the many hiking, camping, and biking opportunities in the Pacific Northwest.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My current experience in web development is quite limited so I’m not sure whether front-end or back-end development is better for me. But this is precisely why taking a course on full-stack development piques my interest so much; it gives me a chance to delve into both and see where my passion lies. Regardless, my goal coming out of this course is to get my foot into the field and continue to develop my coding and development skills as I work in the Seattle area.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>My current experience in web development is quite limited so I’m not sure whether front-end or back-end development is better for me. But this is precisely why taking a course on full-stack development piques my interest so much; it gives me a chance to delve into both and see where my passion lies. Regardless, my goal coming out of this course is to get my foot into the field and continue to develop my coding and development skills as I work in the Seattle area.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I’ve always been interested in computers and languages, but I never felt like I had what it took to get into the IT field, but I’m ready to push myself and see how far I can get.</p>
     </section>
 
     <footer id="footer">
